<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">find my representatives</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Infomation</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="failed_to_open_link">Failed to open link</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="permission_denied_explanation">You need to grant location permission.</string>
    <string name="location_required_error">Device location must be enabled.</string>
    <string name="settings">Setting</string>
</resources>
