<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_search_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_address_line_1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/spinner_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_address_line_2" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:entries="@{viewModel.states}"
            android:inputType="textPostalAddress"
            android:selectedItemPosition="@={viewModel.indexSelected}"
            app:layout_constraintBottom_toBottomOf="@id/edit_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_city"
            app:layout_constraintTop_toTopOf="@id/edit_city" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/edit_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_city" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_find_my_representative"
            style="@style/Button"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_4dp"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_zip" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_use_location"
            style="@style/Button"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_4dp"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_find_my_representative" />

        <TextView
            android:id="@+id/text_representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/my_representatives"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_use_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_representatives"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_representative_title"
            motion:itemCount="4"
            motion:listitem="@layout/item_representative" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>